--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,8 +1,9 @@
 .card {
   background-color: #6e738d;
   border-radius: 5px;
-  height: 5rem;
-  padding: 5px;
+  padding: 10px;
+  justify-content: space-between;
+  margin: 1rem;
 }
 
 .card p {
@@ -17,4 +18,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+}
+
+.row {
+  flex-direction: row;
 }
