--- a/src/css/form.css
+++ b/src/css/form.css
@@ -15,3 +15,19 @@
   font-size: 1.2rem;
 }
 
+.name-form {
+  display: flex;
+  flex-direction: row;
+}
+
+.global-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bg-sapphire {
+  background: #7dc4e4;
+  padding: 0.5rem;
+  border-radius: 7px;
+}
