--- a/src/css/index.css
+++ b/src/css/index.css
@@ -90,6 +90,25 @@ button:focus-visible {
   margin-bottom: 1rem;
 }
 
+.display-block {
+  display: block;
+}
+
+.display-inline {
+  display: inline;
+}
+
+.group {
+  background: #181926;
+  padding: 1rem;
+  border-radius: 7px;
+  margin: 1rem;
+}
+
+input {
+  background: #262733;
+}
+
 @media (min-width: 1000px) {
   .group__container {
     flex-direction: row;
