--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,4 +2,10 @@
   text-align: center;
   font-size: 2rem;
   font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.navbar__btn {
+  font-size: 1.2rem;
+  margin: 0 0.5rem;
 }
