--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -1,11 +1,12 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: $font-family;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 62.5%;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #1e1e2e;
+  color-scheme: dark light;
+  color: $font-color-light;
+  background-color: $bg-dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,24 +22,24 @@
 }
 
 a {
+  font-size: 1.5rem;
   font-weight: 500;
-  color: #89b4fa;
+  color: $link;
   text-decoration: inherit;
 }
 a:hover {
-  color: #89b4fa;
+  color: $link;
 }
 
 body {
   margin: 0;
   display: flex;
-  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: $fs-title;
   line-height: 1.1;
 }
 
@@ -50,12 +51,12 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
-  background-color: #181926;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: $bg-btn-dark;
 }
 button:hover {
   border-color: #8aadf4;
@@ -65,52 +66,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #4c4f69;
-    background-color: #eff1f5;
-  }
-  a {
-    color: #1e66f5;
-  }
-  a:hover {
-    color: #1e66f5;
-  }
-  button {
-    background-color: #dce0e8;
-  }
-}
-
-.group__container {
-  flex-direction: row;
-  display: flex;
-}
-
-.mb-0 {
-  margin-bottom: 0;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.display-block {
-  display: block;
-}
-
-.display-inline {
-  display: inline;
-}
-
-.group {
-  background: #181926;
-  padding: 1rem;
-  border-radius: 7px;
-  margin: 1rem;
-}
-
 input {
-  background: #262733;
+  background: $bg-input-dark;
+  border: 0;
+  outline: 0;
 }
 
 @media (min-width: 1000px) {
